layout/generic/nsFlexContainerFrame.h
@@ -123,6 +123,8 @@ public:
               const ReflowInput& aReflowInput,
               nsReflowStatus& aStatus) override;
 
+  void DidReflow(nsPresContext*, const ReflowInput*) final;
+
   nscoord GetMinISize(gfxContext* aRenderingContext) override;
   nscoord GetPrefISize(gfxContext* aRenderingContext) override;
 
